--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,10 +19,10 @@ body {
 .container {
   max-width: 720px;
   margin: 0 auto;
-  height: 100%;
+  height: calc(100vh - 10rem);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   padding: 2rem;
 }
